Kubernetes/Deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-spring-boot-app
spec:
  replicas: 2  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: my-spring-boot-app
  template:
    metadata:
      labels:
        app: my-spring-boot-app
    spec:
      containers:
      - name: my-spring-boot-app
        image: <your-docker-image>  # Replace with the Docker image for your Spring Boot app
        ports:
        - containerPort: 8080  # The port on which your Spring Boot app listens
