Kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-spring-boot-app-service
spec:
  selector:
    app: my-spring-boot-app
  ports:
    - protocol: TCP
      port: 80  # The port exposed by the service
      targetPort: 8080  # The port your Spring Boot app listens on
  type: LoadBalancer  # Update the type based on your requirements
